# trivia

./: .gitignore  Docker-Compse.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf
.github/workflows/: build.yml  main.yml
api/: Dockerfile  pyproject.toml
api/scripts/: verify.sh
api/trivia/: main.py
api/trivia/auth/: auth.py  endpoints.py
api/trivia/documents/: __init__.py  quiz.py  response.py
api/ui/: Dockerfile  package-lock.json
ui/: Dockerfile  package-lock.json  package.json
ui/public/: index.html
ui/src/: main.ts
ui/src/components/: HelloWorld.vue
ui/src/mixins/: now.ts
ui/src/router/: index.ts
ui/src/views/: HomeView.vue  Key.vue  Leaderboard.vue  Trivia.vue
