[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Noah Witt", email = "noah@noah-witt.com"},
]
dependencies = [
    "fastapi==0.109.2",
    "gunicorn==21.2.0",
    "uvicorn==0.27.1",
    "beanie==1.25.0",
    "pydantic~=2.6",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "PROPRIETARY"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest~=7.0.0",
    "black~=24.2.0",
    "mypy~=1.8.0",
    "flake8~=7.0.0",
]
